<resources>
    <string name="app_name">PriceTracker</string>
    <string name="select">Select item</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchByName">Search by name</string>
</resources>