<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/white"
    android:showDividers="middle"
    android:orientation="vertical"
    android:divider="@drawable/empty_tall_divider"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/signupUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:inputType="text" />

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="#ffffff"
        android:inputType="textPassword"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/signup" />

</LinearLayout>
